--- a/myapp/ios/Podfile
+++ b/myapp/ios/Podfile
@@ -12,6 +12,8 @@ target 'myapp' do
     :hermes_enabled => false
   )
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'myappTests' do
     inherit! :complete
     # Pods for testing
