--- a/myapp/ios/myapp/Info.plist
+++ b/myapp/ios/myapp/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,36 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>HindSiliguri-Bold.ttf</string>
+		<string>HindSiliguri-Light.ttf</string>
+		<string>HindSiliguri-Medium.ttf</string>
+		<string>HindSiliguri-Regular.ttf</string>
+		<string>HindSiliguri-SemiBold.ttf</string>
+		<string>LibreBaskerville-Bold.ttf</string>
+		<string>LibreBaskerville-Italic.ttf</string>
+		<string>LibreBaskerville-Regular.ttf</string>
+		<string>Overpass-Black.ttf</string>
+		<string>Overpass-BlackItalic.ttf</string>
+		<string>Overpass-Bold.ttf</string>
+		<string>Overpass-BoldItalic.ttf</string>
+		<string>Overpass-ExtraBold.ttf</string>
+		<string>Overpass-ExtraBoldItalic.ttf</string>
+		<string>Overpass-ExtraLight.ttf</string>
+		<string>Overpass-ExtraLightItalic.ttf</string>
+		<string>Overpass-Italic-VariableFont_wght.ttf</string>
+		<string>Overpass-Italic.ttf</string>
+		<string>Overpass-Light.ttf</string>
+		<string>Overpass-LightItalic.ttf</string>
+		<string>Overpass-Medium.ttf</string>
+		<string>Overpass-MediumItalic.ttf</string>
+		<string>Overpass-Regular.ttf</string>
+		<string>Overpass-SemiBold.ttf</string>
+		<string>Overpass-SemiBoldItalic.ttf</string>
+		<string>Overpass-Thin.ttf</string>
+		<string>Overpass-ThinItalic.ttf</string>
+		<string>Overpass-VariableFont_wght.ttf</string>
+	</array>
 </dict>
 </plist>
