--- a/myapp/package.json
+++ b/myapp/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2"
+    "react-native-screens": "^3.10.2",
+    "react-native-sha256": "^1.4.7"
   },
   "devDependencies": {
     "@babel/core": "7.16.12",
