--- a/myapp/package.json
+++ b/myapp/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-safe-area-context": "^3.3.2",
